{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 150,
  "lineage": "bdb96579-7008-af96-aa3b-5d84c2a1b9bc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059a91e37220a723a",
            "arn": "arn:aws:ec2:ap-northeast-3:296569421253:elastic-ip/eipalloc-059a91e37220a723a",
            "domain": "vpc",
            "id": "eipalloc-059a91e37220a723a",
            "network_border_group": "ap-northeast-3",
            "public_dns": "ec2-16-209-4-96.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "16.209.4.96",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-3",
            "tags_all": {
              "ManagedBy": "Terraform",
              "Owner": "Henry Lee"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:296569421253:internet-gateway/igw-0341a2aa35a18a224",
            "id": "igw-0341a2aa35a18a224",
            "owner_id": "296569421253",
            "region": "ap-northeast-3",
            "tags_all": {
              "ManagedBy": "Terraform",
              "Owner": "Henry Lee"
            },
            "vpc_id": "vpc-0c641382a2404b696"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-059a91e37220a723a",
            "association_id": "eipassoc-0b43f88de8b85d256",
            "connectivity_type": "public",
            "id": "nat-0fd3957fbb9d97953",
            "network_interface_id": "eni-0b78c336c69daeee7",
            "private_ip": "10.0.53.199",
            "public_ip": "16.209.4.96",
            "region": "ap-northeast-3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cee4cd557362c861",
            "tags_all": {
              "ManagedBy": "Terraform",
              "Owner": "Henry Lee"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:296569421253:route-table/rtb-070e2213917180312",
            "id": "rtb-070e2213917180312",
            "owner_id": "296569421253",
            "propagating_vgws": [],
            "region": "ap-northeast-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd3957fbb9d97953",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform",
              "Owner": "Henry Lee"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c641382a2404b696"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "296569421253",
            "id": "rtb-070e2213917180312",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:296569421253:route-table/rtb-045c3b1411fb33b56",
            "id": "rtb-045c3b1411fb33b56",
            "owner_id": "296569421253",
            "propagating_vgws": [],
            "region": "ap-northeast-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0341a2aa35a18a224",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform",
              "Owner": "Henry Lee"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c641382a2404b696"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "296569421253",
            "id": "rtb-045c3b1411fb33b56",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019148674114ddb1d",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-070e2213917180312",
            "subnet_id": "subnet-04450213b4c048139"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd3fb32a7a8de2c4",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-070e2213917180312",
            "subnet_id": "subnet-01b9def0d534d3c6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f46d70728088b29b",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-045c3b1411fb33b56",
            "subnet_id": "subnet-0cee4cd557362c861"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet_1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0732cd9d8492308cd",
            "region": "ap-northeast-3",
            "route_table_id": "rtb-045c3b1411fb33b56",
            "subnet_id": "subnet-002c7913ed7738484"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet_2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:296569421253:security-group/sg-08d29eed45d571666",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d29eed45d571666",
            "ingress": [],
            "name": "terraform-20251014120900574000000001",
            "name_prefix": "terraform-",
            "owner_id": "296569421253",
            "region": "ap-northeast-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "node-group-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "node-group-sg",
              "Owner": "Henry Lee"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c641382a2404b696"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "296569421253",
            "id": "sg-08d29eed45d571666",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_to_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow control plane to communicate with nodes",
            "from_port": 0,
            "id": "sgrule-1314602679",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-3",
            "security_group_id": "sg-08d29eed45d571666",
            "security_group_rule_id": "sgr-09c047ca2433f08d0",
            "self": false,
            "source_security_group_id": "sg-0941a92849f4449fb",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.this",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_security_group.node_group_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_to_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with control plane",
            "from_port": 0,
            "id": "sgrule-2645967194",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-northeast-3",
            "security_group_id": "sg-0941a92849f4449fb",
            "security_group_rule_id": "sgr-08becebda1e8f5b80",
            "self": false,
            "source_security_group_id": "sg-08d29eed45d571666",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eks_cluster.this",
            "aws_iam_role.eks_cluster_role",
            "aws_iam_role_policy_attachment.eks_cluster_policy",
            "aws_security_group.node_group_sg",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:296569421253:subnet/subnet-04450213b4c048139",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04450213b4c048139",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296569421253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "private-subnet-1",
              "kubernetes.io/cluster/henry-practice": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-1",
              "Owner": "Henry Lee",
              "kubernetes.io/cluster/henry-practice": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c641382a2404b696"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "296569421253",
            "id": "subnet-04450213b4c048139",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:296569421253:subnet/subnet-01b9def0d534d3c6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b9def0d534d3c6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296569421253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "private-subnet-2",
              "kubernetes.io/cluster/henry-practice": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private-subnet-2",
              "Owner": "Henry Lee",
              "kubernetes.io/cluster/henry-practice": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c641382a2404b696"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "296569421253",
            "id": "subnet-01b9def0d534d3c6a",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:296569421253:subnet/subnet-0cee4cd557362c861",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cee4cd557362c861",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296569421253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "public-subnet-1",
              "kubernetes.io/cluster/henry-practice": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-1",
              "Owner": "Henry Lee",
              "kubernetes.io/cluster/henry-practice": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c641382a2404b696"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "296569421253",
            "id": "subnet-0cee4cd557362c861",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:296569421253:subnet/subnet-002c7913ed7738484",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002c7913ed7738484",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296569421253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "public-subnet-2",
              "kubernetes.io/cluster/henry-practice": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-2",
              "Owner": "Henry Lee",
              "kubernetes.io/cluster/henry-practice": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c641382a2404b696"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "296569421253",
            "id": "subnet-002c7913ed7738484",
            "region": "ap-northeast-3"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:296569421253:vpc/vpc-0c641382a2404b696",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01abed28605de069a",
            "default_route_table_id": "rtb-0c5393928b9b9f4be",
            "default_security_group_id": "sg-010787a905e5e257d",
            "dhcp_options_id": "dopt-dda9edb4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c641382a2404b696",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5393928b9b9f4be",
            "owner_id": "296569421253",
            "region": "ap-northeast-3",
            "tags": {
              "Name": "henry-practice"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "henry-practice",
              "Owner": "Henry Lee"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}